--- a/crmWeb/templates/navbar.html
+++ b/crmWeb/templates/navbar.html
@@ -12,7 +12,12 @@
                         <a class="nav-link" href="{% url 'logout' %}">Logout</a>
                     </li>
                 {% else %}
-
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'home' %}">Login</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'register' %}">Register</a>
+                    </li>
                 {% endif %}
             </ul>
         </div>
