--- a/crmWeb/templates/home.html
+++ b/crmWeb/templates/home.html
@@ -11,15 +11,13 @@
     <br>
     <form action="{% url 'home' %}" method="POST">
         {% csrf_token %}
-        <form>
-            <div class="mb-3">
-                <input type="text" class="form-control" name="user_name" placeholder="User Name" required>
-            </div>
-            <div class="mb-3">
-                <input type="password" class="form-control" name="password" placeholder="Password" required>
-            </div>
-            <button type="submit" class="btn btn-secondary">Login</button>
-        </form>
+        <div class="mb-3">
+            <input type="text" class="form-control" name="username" placeholder="User Name" required>
+        </div>
+        <div class="mb-3">
+            <input type="password" class="form-control" name="password" placeholder="Password" required>
+        </div>
+        <button type="submit" class="btn btn-secondary">Login</button>
     </form>
 </div>
 
